--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "@tailwindcss/vite": "^4.0.3",
+    "astro": "^5.2.5",
+    "gsap": "^3.12.7",
+    "swiper": "^11.2.2",
+    "tailwindcss": "^4.0.3"
   }
 }
